<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/ivFilm"
            android:layout_width="414dp"
            android:layout_height="295dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvFilmName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/film"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tvSt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                android:text="@string/sutradara" />

            <TextView
                android:id="@+id/tvSutradara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                android:text="@string/sutradara" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp" >


            <TextView
                android:id="@+id/tvPs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:text="@string/produser" />

            <TextView
                android:id="@+id/tvProduser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/produser" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/tahun_rilis"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvtahunRilis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                android:text="@string/tahun_rilis" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp">

            <TextView
                android:id="@+id/tvSinopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textStyle="bold"
                android:text="@string/sinopsis" />

            <TextView
                android:id="@+id/tvDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:justificationMode="inter_word"
                android:text="@string/detail" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>